feat: add public read cache negotiation
